--- a/album.html
+++ b/album.html
@@ -35,7 +35,7 @@
             <div class="caption">Freestyle en Montañas</div>
         </div>
         <div class="video-item cinematico">
-            <iframe src="https://www.youtube.com/embed/dQw4w9WgXcQ" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/watch?v=g73M6OZK5Bk" allowfullscreen></iframe>
             <div class="caption">Toma Cinemática de la Costa</div>
         </div>
     </section>
