--- a/album.html
+++ b/album.html
@@ -36,7 +36,7 @@
         </div>
         <div class="video-item cinematico">
             <iframe src="https://www.youtube.com/embed/g73M6OZK5Bk" allowfullscreen></iframe>
-            <div class="caption">Toma Cinemática de la Costa</div>
+            <div class="caption">Tomas Cinemáticas </div>
         </div>
     </section>
 
