--- a/album.html
+++ b/album.html
@@ -31,7 +31,7 @@
             <div class="caption">Carrera en Circuito Urbano</div>
         </div>
         <div class="video-item freestyle">
-            <iframe src="https://www.youtube.com/embed/dQw4w9WgXcQ" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/iTQAirJY6es" allowfullscreen></iframe>
             <div class="caption">Freestyle en Montañas</div>
         </div>
         <div class="video-item cinematico">
