--- a/index.html
+++ b/index.html
@@ -1,27 +1,44 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SKYACE FPV - Inicio</title>
-    <link rel="stylesheet" href="css/style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>SkyAce FPV - Videos Aéreos Profesionales</title>
+  <style>
+    body { font-family: Arial, sans-serif; margin: 0; padding: 0; background: #f0f0f0; color: #333; }
+    header { background: #000; color: #fff; padding: 40px 20px; text-align: center; }
+    header h1 { margin: 0; font-size: 2.5em; }
+    header p { margin: 10px 0 0; font-size: 1.2em; }
+    section { padding: 40px 20px; text-align: center; }
+    .button { display: inline-block; margin: 10px; padding: 15px 25px; background: #007BFF; color: white; text-decoration: none; border-radius: 5px; font-size: 1em; }
+    .button:hover { background: #0056b3; }
+    iframe { max-width: 100%; height: auto; border: none; margin-top: 20px; }
+    footer { background: #000; color: #fff; padding: 20px; text-align: center; font-size: 0.9em; }
+  </style>
 </head>
 <body>
-    <header>
-        <img src="assets/logo.png" alt="SKYACE FPV Logo">
-        <h1>Bienvenido a SKYACE FPV</h1>
-        <p>Domina el cielo con nuestros vídeos aéreos profesionales.</p>
-        <nav>
-            <a href="index.html">Inicio</a>
-            <a href="album.html">Álbum</a>
-            <a href="contacto.html">Contacto</a>
-        </nav>
-    </header>
 
-    <section class="hero">
-        <h2>Especialistas en vídeos FPV: Carreras, Freestyle y Cinemático</h2>
-        <p>Capturamos tomas imposibles con drones de última generación.</p>
-    </section>
+<header>
+  <h1>SkyAce FPV</h1>
+  <p>Capturamos tu mundo desde el cielo</p>
+</header>
+
+<section>
+  <h2>Nuestros Trabajos</h2>
+  <p>Mira uno de nuestros mejores vuelos:</p>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/TU_VIDEO_ID" allowfullscreen></iframe>
+</section>
+
+<section>
+  <h2>Contáctanos</h2>
+  <a class="button" href="mailto:contacto@skyacefpv.com">Escríbenos</a>
+  <a class="button" href="https://www.instagram.com/skyacefpv" target="_blank">Instagram</a>
+  <a class="button" href="https://www.youtube.com/@skyacefpv" target="_blank">YouTube</a>
+</section>
+
+<footer>
+  © 2025 SkyAce FPV. Todos los derechos reservados.
+</footer>
 
 </body>
 </html>
