--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 <section>
   <h2>Nuestros Trabajos</h2>
-  <p>Mira uno de nuestros mejores vuelos:</p>
+  <p>Mira uno de nuestros vuelos:</p>
   <iframe width="560" height="315" src="https://www.youtube.com/embed/TU_VIDEO_ID" allowfullscreen></iframe>
 </section>
 
