--- a/index.html
+++ b/index.html
@@ -6,27 +6,44 @@
   <title>SkyAce FPV - Videos Aéreos Profesionales</title>
   <style>
     body { font-family: Arial, sans-serif; margin: 0; padding: 0; background: #f0f0f0; color: #333; }
-    header { background: #000; color: #fff; padding: 40px 20px; text-align: center; }
-    header h1 { margin: 0; font-size: 2.5em; }
-    header p { margin: 10px 0 0; font-size: 1.2em; }
+    header { background: #000; color: #fff; padding: 20px; text-align: center; }
+    header img { width: 120px; height: auto; margin-bottom: 10px; }
+    header h1 { margin: 0; font-size: 2.2em; }
+    header p { margin: 5px 0 0; font-size: 1.1em; }
     section { padding: 40px 20px; text-align: center; }
     .button { display: inline-block; margin: 10px; padding: 15px 25px; background: #007BFF; color: white; text-decoration: none; border-radius: 5px; font-size: 1em; }
     .button:hover { background: #0056b3; }
-    iframe { max-width: 100%; height: auto; border: none; margin-top: 20px; }
+    .slider { max-width: 560px; margin: 20px auto; position: relative; }
+    .slides iframe { display: none; width: 100%; height: 315px; }
+    .slides iframe.active { display: block; }
+    .nav-btn { cursor: pointer; font-size: 2em; margin: 0 15px; color: #007BFF; }
     footer { background: #000; color: #fff; padding: 20px; text-align: center; font-size: 0.9em; }
+    @media (max-width: 600px) {
+      .slides iframe { height: 200px; }
+    }
   </style>
 </head>
 <body>
 
 <header>
+  <!-- 🔥 Cambia este logo por el tuyo -->
+  <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4f/Iconic_image_of_a_drone.svg/512px-Iconic_image_of_a_drone.svg.png" alt="SkyAce FPV Logo">
   <h1>SkyAce FPV</h1>
   <p>Capturamos tu mundo desde el cielo</p>
 </header>
 
 <section>
   <h2>Nuestros Trabajos</h2>
-  <p>Mira uno de nuestros vuelos:</p>
-  <iframe width="560" height="315" src="https://www.youtube.com/embed/TU_VIDEO_ID" allowfullscreen></iframe>
+  <div class="slider">
+    <span class="nav-btn" onclick="prevSlide()">&#10094;</span>
+    <div class="slides">
+      <!-- 🔥 Agrega tus videos de YouTube aquí -->
+      <iframe class="active" src="https://www.youtube.com/embed/VIDEO_ID_1" allowfullscreen></iframe>
+      <iframe src="https://www.youtube.com/embed/VIDEO_ID_2" allowfullscreen></iframe>
+      <iframe src="https://www.youtube.com/embed/VIDEO_ID_3" allowfullscreen></iframe>
+    </div>
+    <span class="nav-btn" onclick="nextSlide()">&#10095;</span>
+  </div>
 </section>
 
 <section>
@@ -34,11 +51,33 @@
   <a class="button" href="mailto:contacto@skyacefpv.com">Escríbenos</a>
   <a class="button" href="https://www.instagram.com/skyacefpv" target="_blank">Instagram</a>
   <a class="button" href="https://www.youtube.com/@skyacefpv" target="_blank">YouTube</a>
+  <a class="button" href="https://wa.me/549XXXXXXXXXX" target="_blank">WhatsApp</a>
 </section>
 
 <footer>
   © 2025 SkyAce FPV. Todos los derechos reservados.
 </footer>
+
+<script>
+  let currentSlide = 0;
+  const slides = document.querySelectorAll('.slides iframe');
+
+  function showSlide(index) {
+    slides.forEach((slide, i) => {
+      slide.classList.toggle('active', i === index);
+    });
+  }
+
+  function nextSlide() {
+    currentSlide = (currentSlide + 1) % slides.length;
+    showSlide(currentSlide);
+  }
+
+  function prevSlide() {
+    currentSlide = (currentSlide - 1 + slides.length) % slides.length;
+    showSlide(currentSlide);
+  }
+</script>
 
 </body>
 </html>
