--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 <header>
   <!-- 🔥 Cambia este logo por el tuyo -->
-  <img src="https://drive.google.com/file/d/1dT_k0Mi8gC3zixPg_SKqafJkr3Y_X9CC/view?usp=drives" alt="SkyAce FPV Logo">
+  <img src="https://imgur.com/a/Rm3H2sG">
   <h1>SkyAce FPV</h1>
   <p>Capturamos tu mundo desde el cielo</p>
 </header>
