--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 <header>
   <!-- 🔥 Cambia este logo por el tuyo -->
-  <img src="https://imgur.com/a/Rm3H2sG">
+  <img src="IMG_0623.png">
   <h1>SkyAce FPV</h1>
   <p>Capturamos tu mundo desde el cielo</p>
 </header>
