--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 <body>
 
 <header>
-  <!-- 🔥 Cambia este logo por el tuyo -->
-  <img src="IMG_0623.png">
+  <!-- 🔥 Logo más grande y alargado -->
+  <img src="IMG_0623.png" style="width: 300px; height: auto; margin-bottom: 20px;">
   <h1>SkyAce FPV</h1>
   <p>Capturamos tu mundo desde el cielo</p>
 </header>
