--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <div class="slides">
       <!-- 🔥 Agrega tus videos de YouTube aquí -->
       <iframe class="active" src="https://www.youtube.com/embed/dCbP18RZ9e8" allowfullscreen></iframe>
-      <iframe src="https://www.youtube.com/embed/VIDEO_ID_2" allowfullscreen></iframe>
+      <iframe src="https://www.youtube.com/embed/nfzySa5pA4k" allowfullscreen></iframe>
       <iframe src="https://www.youtube.com/embed/VIDEO_ID_3" allowfullscreen></iframe>
     </div>
     <span class="nav-btn" onclick="nextSlide()">&#10095;</span>
