--- a/index.html
+++ b/index.html
@@ -5,28 +5,122 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>SkyAce FPV - Videos Aéreos Profesionales</title>
   <style>
-    body { font-family: Arial, sans-serif; margin: 0; padding: 0; background: #f0f0f0; color: #333; }
-    header { background: #000; color: #fff; padding: 20px; text-align: center; }
-    header img { width: 120px; height: auto; margin-bottom: 10px; }
-    header h1 { margin: 0; font-size: 2.2em; }
-    header p { margin: 5px 0 0; font-size: 1.1em; }
-    section { padding: 40px 20px; text-align: center; }
-    .button { display: inline-block; margin: 10px; padding: 15px 25px; background: #007BFF; color: white; text-decoration: none; border-radius: 5px; font-size: 1em; }
-    .button:hover { background: #0056b3; }
-    .slider { max-width: 560px; margin: 20px auto; position: relative; }
-    .slides iframe { display: none; width: 100%; height: 315px; }
-    .slides iframe.active { display: block; }
-    .nav-btn { cursor: pointer; font-size: 2em; margin: 0 15px; color: #007BFF; }
-    footer { background: #000; color: #fff; padding: 20px; text-align: center; font-size: 0.9em; }
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+      background: #000; /* Fondo negro */
+      color: #fff;
+    }
+
+    /* Splash screen */
+    #splash {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: #000;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      z-index: 1000;
+    }
+
+    #splash img {
+      max-width: 80%;
+      height: auto;
+    }
+
+    header {
+      background: #000;
+      color: #fff;
+      padding: 20px;
+      text-align: center;
+    }
+
+    header img {
+      width: 300px;
+      height: auto;
+      margin-bottom: 20px;
+    }
+
+    header h1 {
+      margin: 0;
+      font-size: 2.2em;
+    }
+
+    header p {
+      margin: 5px 0 0;
+      font-size: 1.1em;
+    }
+
+    section {
+      padding: 40px 20px;
+      text-align: center;
+    }
+
+    .button {
+      display: inline-block;
+      margin: 10px;
+      padding: 15px 25px;
+      background: #007BFF;
+      color: white;
+      text-decoration: none;
+      border-radius: 5px;
+      font-size: 1em;
+    }
+
+    .button:hover {
+      background: #0056b3;
+    }
+
+    .slider {
+      max-width: 560px;
+      margin: 20px auto;
+      position: relative;
+    }
+
+    .slides iframe {
+      display: none;
+      width: 100%;
+      height: 315px;
+    }
+
+    .slides iframe.active {
+      display: block;
+    }
+
+    .nav-btn {
+      cursor: pointer;
+      font-size: 2em;
+      margin: 0 15px;
+      color: #007BFF;
+    }
+
+    footer {
+      background: #000;
+      color: #fff;
+      padding: 20px;
+      text-align: center;
+      font-size: 0.9em;
+    }
+
     @media (max-width: 600px) {
-      .slides iframe { height: 200px; }
+      .slides iframe {
+        height: 200px;
+      }
     }
   </style>
 </head>
 <body>
 
+<!-- Splash Screen -->
+<div id="splash">
+  <img src="tu-imagen-splash.png" alt="Logo de SkyAce">
+</div>
+
 <header>
-  <!-- 🔥 Logo más grande y alargado -->
   <img src="IMG_0623.png" style="width: 300px; height: auto; margin-bottom: 20px;">
   <h1></h1>
   <p>Capturamos tu mundo desde el cielo</p>
@@ -37,7 +131,6 @@
   <div class="slider">
     <span class="nav-btn" onclick="prevSlide()">&#10094;</span>
     <div class="slides">
-      <!-- 🔥 Agrega tus videos de YouTube aquí -->
       <iframe class="active" src="https://www.youtube.com/embed/dCbP18RZ9e8" allowfullscreen></iframe>
       <iframe src="https://www.youtube.com/embed/nfzySa5pA4k" allowfullscreen></iframe>
       <iframe src="https://www.youtube.com/embed/VIDEO_ID_3" allowfullscreen></iframe>
@@ -59,6 +152,7 @@
 </footer>
 
 <script>
+  // Slider functionality
   let currentSlide = 0;
   const slides = document.querySelectorAll('.slides iframe');
 
@@ -77,6 +171,13 @@
     currentSlide = (currentSlide - 1 + slides.length) % slides.length;
     showSlide(currentSlide);
   }
+
+  // Splash screen timeout
+  window.addEventListener('load', () => {
+    setTimeout(() => {
+      document.getElementById('splash').style.display = 'none';
+    }, 3000); // 3 segundos
+  });
 </script>
 
 </body>
