--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 
 <!-- Splash Screen -->
 <div id="splash">
-  <img src="tu-imagen-splash.png" alt="Logo de SkyAce">
+  <img src="e9ce621a-9319-48bf-91b7-c171ef8d0f18.jpeg" alt="Logo de SkyAce">
 </div>
 
 <header>
