--- a/index.html
+++ b/index.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>SkyAce FPV - Videos Aéreos Profesionales</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
   <style>
     body {
       font-family: Arial, sans-serif;
       margin: 0;
       padding: 0;
-      background: #000; /* Fondo negro */
+      background: #000;
       color: #fff;
     }
 
-    /* Splash screen */
+    /* Splash */
     #splash {
       position: fixed;
       top: 0;
@@ -34,10 +34,8 @@
     }
 
     header {
-      background: #000;
-      color: #fff;
-      padding: 20px;
       text-align: center;
+      padding: 20px;
     }
 
     header img {
@@ -61,42 +59,63 @@
       text-align: center;
     }
 
+    h2 {
+      font-size: 1.8em;
+      display: inline-flex;
+      align-items: center;
+      gap: 10px;
+      position: relative;
+      cursor: default;
+    }
+
+    h2::after {
+      content: '';
+      position: absolute;
+      bottom: -5px;
+      left: 0;
+      width: 0%;
+      height: 3px;
+      background-color: #007BFF;
+      transition: width 0.3s ease;
+    }
+
+    h2:hover::after {
+      width: 100%;
+    }
+
+    .icono-estilo {
+      color: #007BFF;
+    }
+
+    .video-grid {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 20px;
+      margin-top: 20px;
+    }
+
+    .video-grid iframe {
+      width: 100%;
+      max-width: 560px;
+      height: 315px;
+      border: none;
+    }
+
     .button {
       display: inline-block;
       margin: 10px;
       padding: 15px 25px;
       background: #007BFF;
-      color: white;
+      color: #fff;
       text-decoration: none;
       border-radius: 5px;
       font-size: 1em;
+      transition: background 0.3s;
     }
 
     .button:hover {
       background: #0056b3;
-    }
-
-    .slider {
-      max-width: 560px;
-      margin: 20px auto;
-      position: relative;
-    }
-
-    .slides iframe {
-      display: none;
-      width: 100%;
-      height: 315px;
-    }
-
-    .slides iframe.active {
-      display: block;
-    }
-
-    .nav-btn {
-      cursor: pointer;
-      font-size: 2em;
-      margin: 0 15px;
-      color: #007BFF;
     }
 
     footer {
@@ -108,7 +127,7 @@
     }
 
     @media (max-width: 600px) {
-      .slides iframe {
+      .video-grid iframe {
         height: 200px;
       }
     }
@@ -116,70 +135,64 @@
 </head>
 <body>
 
-<!-- Splash Screen -->
-<div id="splash">
-  <img src="e9ce621a-9319-48bf-91b7-c171ef8d0f18.jpeg" alt="Logo de SkyAce">
-</div>
+  <!-- Splash Screen -->
+  <div id="splash">
+    <img src="e9ce621a-9319-48bf-91b7-c171ef8d0f18.jpeg" alt="Logo de SkyAce" />
+  </div>
 
-<header>
-  <img src="IMG_0623.png" style="width: 300px; height: auto; margin-bottom: 20px;">
-  <h1></h1>
-  <p>Capturamos tu mundo desde el cielo</p>
-</header>
+  <!-- Encabezado -->
+  <header>
+    <img src="IMG_0623.png" alt="SkyAce FPV Logo" />
+    <h1>SkyAce FPV</h1>
+    <p>Capturamos tu mundo desde el cielo</p>
+  </header>
 
-<section>
-  <h2>Nuestros Trabajos</h2>
-  <div class="slider">
-    <span class="nav-btn" onclick="prevSlide()">&#10094;</span>
-    <div class="slides">
-      <iframe class="active" src="https://www.youtube.com/embed/dCbP18RZ9e8" allowfullscreen></iframe>
+  <!-- Sección Promocionales -->
+  <section>
+    <h2><i class="fas fa-bullhorn fa-2x icono-estilo"></i>Estilo: Promocionales</h2>
+    <div class="video-grid">
+      <iframe src="https://www.youtube.com/embed/dCbP18RZ9e8" allowfullscreen></iframe>
+      <!-- Agrega más videos si deseas -->
+    </div>
+  </section>
+
+  <!-- Sección Eventos -->
+  <section>
+    <h2><i class="fas fa-music fa-2x icono-estilo"></i>Estilo: Eventos</h2>
+    <div class="video-grid">
       <iframe src="https://www.youtube.com/embed/nfzySa5pA4k" allowfullscreen></iframe>
+    </div>
+  </section>
+
+  <!-- Sección Cinemáticos -->
+  <section>
+    <h2><i class="fas fa-film fa-2x icono-estilo"></i>Estilo: Cinemáticos</h2>
+    <div class="video-grid">
       <iframe src="https://www.youtube.com/embed/VIDEO_ID_3" allowfullscreen></iframe>
     </div>
-    <span class="nav-btn" onclick="nextSlide()">&#10095;</span>
-  </div>
-</section>
+  </section>
 
-<section>
-  <h2>Contáctanos</h2>
-  <a class="button" href="mailto:contacto@skyacefpv.com">Escríbenos</a>
-  <a class="button" href="https://www.instagram.com/skyacefpv" target="_blank">Instagram</a>
-  <a class="button" href="https://www.youtube.com/@skyacefpv" target="_blank">YouTube</a>
-  <a class="button" href="https://wa.me/549XXXXXXXXXX" target="_blank">WhatsApp</a>
-</section>
+  <!-- Contacto -->
+  <section>
+    <h2><i class="fas fa-envelope fa-2x icono-estilo"></i>Contáctanos</h2>
+    <a class="button" href="mailto:contacto@skyacefpv.com">Escríbenos</a>
+    <a class="button" href="https://www.instagram.com/skyacefpv" target="_blank">Instagram</a>
+    <a class="button" href="https://www.youtube.com/@skyacefpv" target="_blank">YouTube</a>
+    <a class="button" href="https://wa.me/549XXXXXXXXXX" target="_blank">WhatsApp</a>
+  </section>
 
-<footer>
-  © 2025 SkyAce FPV. Todos los derechos reservados.
-</footer>
+  <footer>
+    © 2025 SkyAce FPV. Todos los derechos reservados.
+  </footer>
 
-<script>
-  // Slider functionality
-  let currentSlide = 0;
-  const slides = document.querySelectorAll('.slides iframe');
-
-  function showSlide(index) {
-    slides.forEach((slide, i) => {
-      slide.classList.toggle('active', i === index);
+  <!-- Script para splash -->
+  <script>
+    window.addEventListener('load', () => {
+      setTimeout(() => {
+        document.getElementById('splash').style.display = 'none';
+      }, 3000);
     });
-  }
-
-  function nextSlide() {
-    currentSlide = (currentSlide + 1) % slides.length;
-    showSlide(currentSlide);
-  }
-
-  function prevSlide() {
-    currentSlide = (currentSlide - 1 + slides.length) % slides.length;
-    showSlide(currentSlide);
-  }
-
-  // Splash screen timeout
-  window.addEventListener('load', () => {
-    setTimeout(() => {
-      document.getElementById('splash').style.display = 'none';
-    }, 3000); // 3 segundos
-  });
-</script>
+  </script>
 
 </body>
 </html>
