--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 
   <!-- Sección Promocionales -->
   <section>
-    <h2><i class="fas fa-bullhorn fa-2x icono-estilo"></i>Estilo: Promocionales</h2>
+    <h2><i class="fas fa-bullhorn fa-2x icono-estilo"></i>Videos Promocionales</h2>
     <div class="video-grid">
       <iframe src="https://www.youtube.com/embed/dCbP18RZ9e8" allowfullscreen></iframe>
       <!-- Agrega más videos si deseas -->
@@ -158,7 +158,7 @@
 
   <!-- Sección Eventos -->
   <section>
-    <h2><i class="fas fa-music fa-2x icono-estilo"></i>Estilo: Eventos</h2>
+    <h2><i class="fas fa-music fa-2x icono-estilo"></i>Videos de Eventos</h2>
     <div class="video-grid">
       <iframe src="https://www.youtube.com/embed/nfzySa5pA4k" allowfullscreen></iframe>
     </div>
@@ -166,7 +166,7 @@
 
   <!-- Sección Cinemáticos -->
   <section>
-    <h2><i class="fas fa-film fa-2x icono-estilo"></i>Estilo: Cinemáticos</h2>
+    <h2><i class="fas fa-film fa-2x icono-estilo"></i>Videos Cinemáticos</h2>
     <div class="video-grid">
       <iframe src="https://www.youtube.com/embed/VIDEO_ID_3" allowfullscreen></iframe>
     </div>
