--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
   <section>
     <h2><i class="fas fa-music fa-2x icono-estilo"></i>Videos de Eventos</h2>
     <div class="video-grid">
-      <iframe src="https://www.youtube.com/embed/nfzySa5pA4k" allowfullscreen></iframe>
+      <iframe src="https://www.youtube.com/embedfTcC7dqG7RA" allowfullscreen></iframe>
     </div>
   </section>
 
@@ -168,7 +168,7 @@
   <section>
     <h2><i class="fas fa-film fa-2x icono-estilo"></i>Videos Cinemáticos</h2>
     <div class="video-grid">
-      <iframe src="https://www.youtube.com/embed/VIDEO_ID_3" allowfullscreen></iframe>
+      <iframe src="https://www.youtube.com/embed/nfzySa5pA4k" allowfullscreen></iframe>
     </div>
   </section>
 
