Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
     <h2><i class="fas fa-bullhorn fa-2x icono-estilo"></i>Videos Promocionales</h2>
     <div class="video-grid">
       <iframe src="https://www.youtube.com/embed/nCQYo2eZlwk" allowfullscreen></iframe>
-      <!-- Agrega más videos si deseas -->
+<iframe src="https://www.youtube.com/embed/nfzySa5pA4k" allowfullscreen></iframe>
     </div>
   </section>
 
