--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 
   <!-- Sección Cinemáticos -->
   <section>
-    <h2><i class="fas fa-film fa-2x icono-estilo"></i>Videos Promocionales </h2>
+    <h2><i class="fas fa-film fa-2x icono-estilo"></i> PROMOCIONALES </h2>
     <div class="video-grid">
       <iframe src="https://www.youtube.com/embed/nfzySa5pA4k" allowfullscreen></iframe>
     </div>
