--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 
   <!-- Splash Screen -->
   <div id="splash">
-    <img src="e9ce621a-9319-48bf-91b7-c171ef8d0f18.jpeg" alt="Logo de SkyAce" />
+    <img src="ezgif-695b5ac36a3ed3.gif" alt="Logo de SkyAce" />
   </div>
 
   <!-- Encabezado -->
