--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     body {
       font-family: 'Lato', sans-serif;
       color: #fff;
-      background: url('foindo cielo.jpg') no-repeat center center fixed;
+      background: url('fondo ESTRELLAS.jpg') no-repeat center center fixed;
       background-size: cover;
     }
     h1, h2, h3, h4 {
