--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
 <section class="h-screen flex items-center justify-center text-center px-4">
   <div data-aos="fade-up">
     <h2 class="text-5xl mb-4">FILMACION AÉREA PROFESIONAL</h2>
-    <p class="text-xl mb-6">FPV Cinewhoop + DJI estabilizados. Precisión técnica con creatividad visual.</p>
-    <a href="#contacto" class="bg-gold text-black px-6 py-3 rounded font-semibold hover-gold">Contáctanos</a>
+    <p class="text-xl mb-6">Tanto drones FPV como Estabilizados.Grabacion en 4k a 120 FPS</p>
+    <a href="#contacto" class="bg-gold text-black px-6 py-3 rounded font-semibold hover-gold">Conócenos</a>
   </div>
 </section>
 
