--- a/index.html
+++ b/index.html
@@ -54,6 +54,37 @@
     <a href="#contacto" class="bg-gold text-black px-6 py-3 rounded font-semibold hover-gold">Conócenos</a>
   </div>
 </section>
+<!DOCTYPE html>
+<html lang="es">
+<head>
+  <meta charset="UTF-8">
+  <title>Imagen con Marco Dorado</title>
+  <style>
+    .marco-dorado {
+      display: inline-block;
+      padding: 10px;
+      border: 8px solid gold;
+      border-radius: 12px;
+      box-shadow: 0 0 20px rgba(218, 165, 32, 0.8);
+      background-color: #fff8dc;
+    }
+
+    .marco-dorado img {
+      display: block;
+      max-width: 100%;
+      height: auto;
+      border-radius: 8px;
+    }
+  </style>
+</head>
+<body>
+
+  <div class="marco-dorado">
+    <img src="moto.png" alt="Mi imagen con marco dorado">
+  </div>
+
+</body>
+</html>
 
 <section id="quienes" class="py-20 text-center px-6 max-w-4xl mx-auto bg-black bg-opacity-70 rounded" data-aos="fade-up">
   <h3 class="text-4xl mb-6">¿Quiénes Somos?</h3>
