--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
   <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+<style>
+  .marco-dorado {
+    border: 2px solid gold;
+    padding: 4px;
+    border-radius: 6px;
+    background-color: white;
+    box-shadow: 0 0 8px rgba(218, 165, 32, 0.4);
+  }
+</style>
 
   <style>
     body {
@@ -53,6 +62,20 @@
     <p class="text-xl mb-6">Tanto drones FPV como Estabilizados.Grabacion en 4k a 120 FPS</p>
     <a href="#contacto" class="bg-gold text-black px-6 py-3 rounded font-semibold hover-gold">Conócenos</a>
   </div>
+  <section class="py-12 px-6 flex justify-center" data-aos="fade-up">
+  <div class="flex flex-wrap justify-center gap-6">
+    <div class="marco-dorado">
+      <img src="moto.png" alt="Imagen 1" class="w-40 rounded">
+    </div>
+    <div class="marco-dorado">
+      <img src="playa.png" alt="Imagen 2" class="w-40 rounded">
+    </div>
+    <div class="marco-dorado">
+      <img src="montana.png" alt="Imagen 3" class="w-40 rounded">
+    </div>
+  </div>
+</section>
+
 </section>
 <!DOCTYPE html>
 <html lang="es">
