--- a/index.html
+++ b/index.html
@@ -39,6 +39,16 @@
       border-radius: 6px;
       background-color: white;
       box-shadow: 0 0 8px rgba(218, 165, 32, 0.4);
+      width: 20rem;
+      height: 20rem;
+      overflow: hidden;
+    }
+    .marco-dorado img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      border-radius: 4px;
+      display: block;
     }
   </style>
 </head>
@@ -66,13 +76,13 @@
 <section class="py-12 px-6 flex justify-center" data-aos="fade-up">
   <div class="flex flex-wrap justify-center gap-6">
     <div class="marco-dorado cursor-pointer" onclick="abrirModal('moto.png')">
-      <img src="moto.png" alt="Imagen 1" class="w-40 rounded">
+      <img src="moto.png" alt="Imagen 1">
     </div>
     <div class="marco-dorado cursor-pointer" onclick="abrirModal('playa.png')">
-      <img src="playa.png" alt="Imagen 2" class="w-40 rounded">
+      <img src="playa.png" alt="Imagen 2">
     </div>
     <div class="marco-dorado cursor-pointer" onclick="abrirModal('montana.png')">
-      <img src="montana.png" alt="Imagen 3" class="w-40 rounded">
+      <img src="montana.png" alt="Imagen 3">
     </div>
   </div>
 </section>
@@ -92,7 +102,7 @@
   <h3 class="text-4xl mb-10">Servicios</h3>
   <div class="grid md:grid-cols-2 gap-8 max-w-4xl mx-auto">
     <div class="bg-gray-900 p-6 rounded border border-yellow-600" data-aos="fade-up">
-      <h4 class="text-2xl mb-2">🎮 Producción audiovisual aérea</h4>
+      <h4 class="text-2xl mb-2">🎬 Producción audiovisual aérea</h4>
       <p>Videoclips, publicidad, eventos, reels y vídeos corporativos</p>
       <p class="highlight mt-2">Desde 300 €</p>
     </div>
@@ -102,7 +112,7 @@
       <p class="highlight mt-2">Desde 150 €</p>
     </div>
     <div class="bg-gray-900 p-6 rounded border border-yellow-600" data-aos="fade-up" data-aos-delay="200">
-      <h4 class="text-2xl mb-2">👷 Inspecciones técnicas</h4>
+      <h4 class="text-2xl mb-2">🛠 Inspecciones técnicas</h4>
       <p>Control visual de estructuras, obras, tejados y más</p>
       <p class="highlight mt-2">Desde 150 €</p>
     </div>
@@ -160,3 +170,4 @@
 
 </body>
 </html>
+
