--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
     <h2 class="text-5xl mb-4">FILMACION AÉREA PROFESIONAL</h2>
     <p class="text-xl mb-6">Tanto drones FPV como Estabilizados. Grabación en 4k 120 FPS</p>
      <a href="#contacto" class="bg-gold text-black px-6 py-3 rounded-full font-semibold hover-gold flex items-center justify-center gap-2 animate-bounce">
+  <span>Conócenos</span>
   </div>
 </section>
 
