--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 <section class="h-screen flex items-center justify-center text-center px-4">
   <div data-aos="fade-up">
     <h2 class="text-5xl mb-4">FILMACION AÉREA PROFESIONAL</h2>
-    <p class="text-xl mb-6">Cuando lo que imaginas, se hace realidad.</p>
+    <p class="text-3xl mb-2">Cuando lo que imaginas, se hace realidad.</p>
     
   </div>
 </section>
