--- a/index.html
+++ b/index.html
@@ -86,6 +86,19 @@
     </div>
   </div>
 </section>
+<section class="py-12 px-6 flex justify-center" data-aos="fade-up">
+  <div class="flex flex-wrap justify-center gap-6">
+    <div class="marco-dorado cursor-pointer" onclick="abrirModal('moto.png')">
+      <img src="caballo.png" alt="Imagen 1">
+    </div>
+    <div class="marco-dorado cursor-pointer" onclick="abrirModal('playa.png')">
+      <img src="perro.png" alt="Imagen 2">
+    </div>
+    <div class="marco-dorado cursor-pointer" onclick="abrirModal('montana.png')">
+      <img src="gato.png" alt="Imagen 3">
+    </div>
+  </div>
+</section>
 
 <!-- Modal para imagen ampliada -->
 <div id="modal" class="fixed inset-0 bg-black bg-opacity-80 flex items-center justify-center z-50 hidden">
