--- a/index.html
+++ b/index.html
@@ -88,14 +88,14 @@
 </section>
 <section class="py-12 px-6 flex justify-center" data-aos="fade-up">
   <div class="flex flex-wrap justify-center gap-6">
-    <div class="marco-dorado cursor-pointer" onclick="abrirModal('moto.png')">
-      <img src="caballo.png" alt="Imagen 1">
+    <div class="marco-dorado cursor-pointer" onclick="abrirModal('caballo.png')">
+      <img src="caballo.png" alt="Imagen 4">
     </div>
-    <div class="marco-dorado cursor-pointer" onclick="abrirModal('playa.png')">
-      <img src="perro.png" alt="Imagen 2">
+    <div class="marco-dorado cursor-pointer" onclick="abrirModal('perro.png')">
+      <img src="perro.png" alt="Imagen 5">
     </div>
-    <div class="marco-dorado cursor-pointer" onclick="abrirModal('montana.png')">
-      <img src="gato.png" alt="Imagen 3">
+    <div class="marco-dorado cursor-pointer" onclick="abrirModal('gato.png')">
+      <img src="gato.png" alt="Imagen 6">
     </div>
   </div>
 </section>
