--- a/index.html
+++ b/index.html
@@ -130,9 +130,9 @@
       <p class="highlight mt-2">Desde 150 €</p>
     </div>
     <div class="bg-gray-900 p-6 rounded border border-yellow-600" data-aos="fade-up" data-aos-delay="300">
-      <h4 class="text-2xl mb-2">🧑‍🏫 Formación personalizada FPV</h4>
-      <p>Iniciación o perfeccionamiento en vuelo FPV</p>
-      <p class="highlight mt-2">Desde 100 €</p>
+      <h4 class="text-2xl mb-2">🏍️ Actividades Deportivas</h4>
+      <p>Muestra que sabes hacer, generando alto impacto en tu terreno</p>
+      <p class="highlight mt-2">Desde 50 €</p>
     </div>
   </div>
 </section>
@@ -140,7 +140,7 @@
 <section id="ventajas" class="py-20 text-center px-6 max-w-4xl mx-auto bg-black bg-opacity-70 mt-10 rounded" data-aos="fade-up">
   <h3 class="text-4xl mb-8">¿Por qué elegirnos?</h3>
   <ul class="text-left text-gray-300 space-y-3 text-lg">
-    <li>✅ Tecnología FPV + DJI profesional</li>
+    <li>✅ Dinamismo a tus proyectos</li>
     <li>✅ Calidad cinematográfica y creativa</li>
     <li>✅ Adaptación a cada cliente</li>
     <li>✅ Piloto certificado y cumplimiento legal</li>
